# focusflowd

./: .clang-tidy  CMakeLists.txt  README.md  example-actions.json  focusflow.desktop  focusflowd.desktop  focusflowd.in  focusflowd.service
.github/: commitlint.config.js
.github/workflows/: ci.yml
src/: action_config_window.cpp  action_config_window.h  action_manager.cpp  action_manager.h  dbus_listener.cpp  dbus_listener.h  main.cpp  resources.qrc
